--- a/test/config.json.example
+++ b/test/config.json.example
@@ -1,7 +1,9 @@
 {
-  "username": "foo",
-  "password": "bar",
-  "apiread":  "https://api-foobar.pmp.io",
-  "apiwrite": "https://publish-foobar.pmp.io",
-  "apimedia": "https://media-foobar.pmp.io"
+  "username":     "foo",
+  "password":     "bar",
+  "clientid":     "yourclientid",
+  "clientsecret": "yourclientsecret",
+  "apiread":      "https://api-foobar.pmp.io",
+  "apiwrite":     "https://publish-foobar.pmp.io",
+  "apimedia":     "https://media-foobar.pmp.io"
 }
