--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.16",
-    "mocha": "^1.20.1"
+    "mocha": "^1.20.1",
+    "underscore": "^1.6.0"
   },
   "dependencies": {
     "request": "^2.36.0"
