--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.16",
     "mocha": "^1.20.1",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "uri-template": "^0.4.1"
   },
   "dependencies": {
     "request": "^2.36.0"
