--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Javascript api client for the Public Media Platform",
   "homepage": "https://github.com/publicmediaplatform/pmp-js-sdk",
-  "main": "compile/index.js",
+  "main": "build/pmpsdk.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
