--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.16",
-    "mocha": "^1.20.1",
-    "underscore": "^1.6.0",
-    "uri-template": "^0.4.1"
+    "mocha": "^1.20.1"
   },
   "dependencies": {
-    "guid": "0.0.12",
-    "request": "^2.36.0"
+    "request": "^2.36.0",
+    "underscore": "^1.6.0",
+    "uri-template": "^0.4.1",
+    "url": "^0.10.1",
+    "uuid": "^1.4.1"
   }
 }
