--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "keywords": [
     "pmp",
-    "js",
-    "sdk"
+    "public media platform",
+    "pubmedia",
+    "hypermedia"
   ],
   "author": "cavis <r@cav.is> (http://cav.is)",
   "owner": "Public Media Platform (http://pmp.io)",
